--- a/CPW219-CRUD-Troubleshooting/Views/Shared/_Layout.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Student Roster</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Create">Create Student</a>
+                        </li>
                     </ul>
                 </div>
             </div>
