--- a/CPW219-CRUD-Troubleshooting/Views/Students/Create.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Create.cshtml
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Roster</a>
 </div>
 
 @section Scripts {
