--- a/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
@@ -37,9 +37,8 @@
                     @Html.DisplayFor(modelItem => item.DateOfBirth)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.StudentId">Edit</a> |
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.StudentId">Delete</a>
                 </td>
             </tr>
         }
