Styled all buttons

--- a/CPW219-CRUD-Troubleshooting/Views/Students/Delete.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Delete.cshtml
@@ -32,6 +32,6 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to Roster</a>
+        <a asp-action="Index" class="btn btn-success">Back to Roster</a>
     </form>
 </div>
