--- a/CPW219-CRUD-Troubleshooting/Views/Students/Edit.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Edit.cshtml
@@ -36,8 +36,9 @@
     </div>
 </div>
 
+<br />
 <div>
-    <a asp-action="Index">Back to Roster</a>
+    <a asp-action="Index" class="btn btn-success">Back to Roster</a>
 </div>
 
 @section Scripts {
