--- a/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
@@ -15,7 +15,7 @@
 <h1>Student Roster</h1>
 
 <p>
-    <a asp-action="Create">Create Student</a>
+    <a asp-action="Create" class="btn btn-primary">Create Student</a>
 </p>
 <table class="table">
     <thead>
